Regression(r196648): window.showModalDialog is no longer undefined if the client does not allow showing modal dialog https://bugs.webkit.org/show_bug.cgi?id=154330

Reviewed by Gavin Barraclough.

Source/WebCore:

window.showModalDialog is no longer undefined if the client does not
allow showing modal dialog after r196648. This patch fixes the issue
and add test coverage for this.

Test: fast/dom/Window/forbid-showModalDialog.html

* bindings/js/JSDOMWindowCustom.cpp:
(WebCore::JSDOMWindow::getOwnPropertySlot):
- Move the DOMWindow::canShowModalDialog() check *before* checking
  for static properties as showModalDialog is now in the static
  property table after r196648.
- Add check for Base::getOwnPropertySlot() first to support overriding
  window.showModalDialog (This behavior matches Firefox).
- Return false if DOMWindow::canShowModalDialog() returns false as this
  seems cleaner than claiming that the property is there but undefined.

* page/DOMWindow.cpp:
(WebCore::DOMWindow::canShowModalDialogNow): Deleted.
This was indentical to canShowModalDialog().

(WebCore::DOMWindow::canShowModalDialog):
(WebCore::DOMWindow::setCanShowModalDialogOverride):
(WebCore::DOMWindow::showModalDialog):
* page/DOMWindow.h:
* testing/Internals.cpp:
(WebCore::Internals::setCanShowModalDialogOverride):
* testing/Internals.h:
* testing/Internals.idl:
Add support for overriding the ChromeClient's canShowModalDialog
decision and hook it up to Internals to add layout test coverage.

LayoutTests:

Add layout test to make sure that window.showModalDialog is undefined
when the client does not allow showing modal dialog and to check that
window.showModalDialog can be shadowed.

* fast/dom/Window/forbid-showModalDialog-expected.txt: Added.
* fast/dom/Window/forbid-showModalDialog.html: Added.


Canonical link: https://commits.webkit.org/172460@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@196706 268f45cc-cd09-0410-ab3c-d52691b4dbfc